test/expect/cmd.cc-msvc-bad-cmd.stderr.txt
^error: '--castxml-cc-msvc' compiler command failed:

 'cc-msvc-bad-cmd' '-c' '-FoNUL' '.*/share/castxml/detect_vs.cpp'
